<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gamerbackground"
    android:gravity="center"
    android:orientation="vertical">


<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/gamerbackground" />-->

    <TextView
        android:id="@+id/playerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayersName"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/sadFImageV"
        android:layout_width="190dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/sadface"
        android:visibility="invisible" />

    <Space
        android:layout_width="0dp"
        android:layout_height="230dp"/>


    <TextView
        android:id="@+id/questionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1text"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00FF00"
            android:text="@string/trueText"
            android:backgroundTint="#C154C1"
            android:id="@+id/trueBTN"
            android:gravity="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#15f4ee"
            android:textColor="#FF0000"
            android:text="@string/falseText"
            android:id="@+id/falseBTN"
            android:gravity="center" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextText"
        android:id="@+id/nextBTN" />
    </LinearLayout>



</LinearLayout>