<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC99FF"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello Player:"
        android:id="@+id/playerNameTV"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/score_msg"
        android:textColor="@color/black"
        android:textSize="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/scoreTV"
        android:text="@string/score_text"
        android:textColor="@color/black"
        android:textSize="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_score_by_email"
        android:id="@+id/sendE"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send To High Score"
        android:textStyle="bold"
        android:id="@+id/sendScoreFBBTN"
        android:textSize="25sp"/>

</LinearLayout>
